@@ -226,6 +226,7 @@ EC_TAG_KNOWNFILE                          0x0400
 	EC_TAG_KNOWNFILE_ACCEPT_COUNT             0x0405
 	EC_TAG_KNOWNFILE_ACCEPT_COUNT_ALL         0x0406
 	EC_TAG_KNOWNFILE_AICH_MASTERHASH          0x0407
+	EC_TAG_KNOWNFILE_FILENAME                 0x0408
 
 EC_TAG_SERVER                             0x0500
 	EC_TAG_SERVER_NAME                        0x0501
