@@ -85,6 +85,8 @@ Version 2.3.0 - The river knows.
 		* Added more media file types from eMule
 		* Fixed several cases of amulecmd printing zero on big endian machines
 		* Allow the user to cancel the app if Temp/Incoming is not found
+		* Show downloads as shares in remote gui
+		* Added a bunch of missing details in remote gui
 
 	Vollstrecker:
 		* Unify copyright lines
